fix unwanted spacing in dropdown menu

--- a/client/src/app/static/main-nav/main-navbar-left/main-navbar-left.component.scss
+++ b/client/src/app/static/main-nav/main-navbar-left/main-navbar-left.component.scss
@@ -54,6 +54,8 @@
       position: absolute;
       transform: translateY(-50%);
       color: $brand-inverse;
+      font-size: 1.5rem;
+      margin-top: 0.05rem;
     }
     .dropdown-menu .dropdown-item {
       color: $white;
